kubernetes/infrastructure/observability/dashboards/homepage/base/httproute-health.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-health
  namespace: homepage
spec:
  hostnames:
    - homepage.timourhomelab.org
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/healthcheck
      backendRefs:
        - name: homepage
          port: 3000
