kubernetes/infrastructure/observability/dashboards/homepage/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Homepage
    gethomepage.dev/description: 🌍 This dashboard (Public via Cloudflare)
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: homepage.png
spec:
  hostnames:
    - homepage.timourhomelab.org
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
