kubernetes/infrastructure/observability/dashboards/homepage/base/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: homepage-oidc
  namespace: homepage
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: homepage
  oidc:
    provider:
      issuer: https://iam.timourhomelab.org/realms/kubernetes
      authorizationEndpoint: https://iam.timourhomelab.org/realms/kubernetes/protocol/openid-connect/auth
      tokenEndpoint: https://iam.timourhomelab.org/realms/kubernetes/protocol/openid-connect/token
    clientID: homepage
    clientSecret:
      group: ""
      kind: Secret
      name: keycloak-homepage-client-secret
      namespace: keycloak
    cookieNames:
      accessToken: AccessToken-Homepage
      idToken: IdToken-Homepage
    redirectURL: https://homepage.timourhomelab.org/oauth2/callback
    logoutPath: /oauth2/logout
    forwardAccessToken: true
    refreshToken: true
    scopes:
      - openid
      - profile
      - email
      - groups
